force-app/src/objects/FAM__Fixed_Asset_Management_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of Fixed Asset Management.</description>
    <fields>
        <fullName>FAM__Check_Mandatory_Fields_on_Save__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Asset Cost and Date Acquired fields must contain a value before you can save, update or submit an asset for approval.</description>
        <inlineHelpText>Indicates whether the Asset Cost and Date Acquired fields must contain a value before you can save, update or submit an asset for approval.</inlineHelpText>
        <label>Check Mandatory Fields on Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Dep_Book_Extra_Query_Fields_Classname__c</fullName>
        <description>This field contains a class name to an apex class that provides the implementation to provide the extra Depreciation Book fields to include in queries within the system. Only override this when implementing your own Depreciation Calculations.</description>
        <inlineHelpText>This field contains a class name to an apex class that provides the implementation to provide the extra Depreciation Book fields to include in queries within the system. Only override this when implementing your own Depreciation Calculations.</inlineHelpText>
        <label>Dep Book Extra Query Fields Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Disable_Acq_Journal_Auto_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, prevents Fixed Asset Management from creating acquisition journals automatically when approving an asset. If deselected, acquisition journals are created automatically when approving an asset.</description>
        <inlineHelpText>If selected, prevents Fixed Asset Management from creating acquisition journals automatically when approving an asset. If deselected, acquisition journals are created automatically when approving an asset.</inlineHelpText>
        <label>Disable Acquisition JNL Auto Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Disable_Dep_Journal_Auto_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, prevents Fixed Asset Management from creating depreciation journals automatically when exporting a depreciation schedule. If deselected, depreciation journals are created automatically when exporting a depreciation schedule.</description>
        <inlineHelpText>If selected, prevents Fixed Asset Management from creating depreciation journals automatically when exporting a depreciation schedule. If deselected, depreciation journals are created automatically when exporting a depreciation schedule.</inlineHelpText>
        <label>Disable Depreciation JNL Auto Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Disable_Dis_Journal_Auto_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, prevents Fixed Asset Management from creating disposal journals automatically when disposing of an asset. If deselected, disposal journals are created automatically when disposing of an asset.</description>
        <inlineHelpText>If selected, prevents Fixed Asset Management from creating disposal journals automatically when disposing of an asset. If deselected, disposal journals are created automatically when disposing of an asset.</inlineHelpText>
        <label>Disable Disposal JNL Auto Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Disable_FFA_Journal_Auto_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, prevents Fixed Asset Management from creating journals automatically when approving an asset, exporting a depreciation schedule, or disposing of an asset. If deselected, journals are created automatically when approving an asset, exporting a depreciation schedule, or disposing of an asset.</description>
        <inlineHelpText>If selected, prevents Fixed Asset Management from creating journals automatically when approving an asset, exporting a depreciation schedule, or disposing of an asset. If deselected, journals are created automatically when approving an asset, exporting a depreciation schedule, or disposing of an asset.</inlineHelpText>
        <label>Disable Accounting JNL Auto Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Disable_FFA_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, ignores the Accounting fields when saving a fixed asset. If deselected, makes the Accounting Company and GLA fields mandatory to save an asset.</description>
        <inlineHelpText>If selected, ignores the Accounting fields when saving a fixed asset. If deselected, makes the Accounting Company and GLA fields mandatory to save an asset.</inlineHelpText>
        <label>Disable Accounting Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Inherit_Books_Values__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Contains setting that control if the values of the Depreciation Book at the Asset level should be inherited from the parents Level.</description>
        <inlineHelpText>Indicates whether the values of a Fixed Asset level depreciation book are inherited from the Parent Book if there is one.</inlineHelpText>
        <label>Inherit Values From Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__LockStatusAndActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, prevents the user manually updating the Depreciation Schedule Status and Active fields.</description>
        <label>Lock Dep Schedule Status &amp; Active Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Validate_Status_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected the Status field is validated. This is the default. If deselected the Status field is not validated.</description>
        <inlineHelpText>If selected the Status field is validated. This is the default. If deselected the Status field is not validated.</inlineHelpText>
        <label>Validate Status Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_FAM_FFA_validation_rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ignores validation of Accounting fields when saving a fixed asset. When validation is applied, Accounting company and GLA fields are mandatory.</description>
        <inlineHelpText>Ignores validation of Accounting fields when saving a fixed asset. When validation is applied, Accounting company and GLA fields are mandatory.</inlineHelpText>
        <label>Ignore Validation of FFA fields in FAM</label>
        <type>Checkbox</type>
    </fields>
    <label>Fixed Asset Management Settings</label>
</CustomObject>